# lazo-interview

./: Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: financial.yml  hola-mundo.yml
__pycache__/: vercel.json
interview/: app.py
interview/agents/: auditor_agent.py  model.py
interview/data/: pnl_2025-8f7d3c4a-ce96-4c0e-ad5e-74fbb7239593.csv
interview/services/: file_service.py  github_servide.py
interview/workflows/: audit_agent.py  financial_audit_workflow.py
src/: run_audit.py
src/agents/: auditor_agent.py
src/services/: file_service.py  validation_service.py
src/tools/: pnl_validator.py
src/utils/: file_parser.py
src/workflows/: app.py  financial_audit_workflow.py
