[project]
name = "interview"
version = "0.1.0"
description = ""
authors = [
    {name = "Arturo Guerrero Lopez",email = "aguerrero@wiggi.mx"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "beeai-framework (>=0.1.24,<0.2.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "interview", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
